--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    Hello World
+    <h1>Hello Welcome to my website</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur voluptatum molestias sit eum id aperiam,
+        ducimus fugiat aspernatur culpa consequuntur iusto reprehenderit doloremque accusamus dicta eaque esse! Alias,
+        sapiente quibusdam?</p>
 </body>
 
 </html>
